# censeo

./: README.md  howto.md
Mathematica/: Mathematica Calculations.nb
devices/Bandage Device/: Rotary Endoder Holder.FCStd
devices/Bandage Device/Bluetooth_Arduino_Code/: Bluetooth_Arduino_Code.ino
devices/Bandage Device/PeripheralDeviceCode_copy_20231107203641/: PeripheralDeviceCode_copy_20231107203641.ino
devices/Cream Measurer/BLE_with_color/: BLE_with_color.ino
devices/PeripheralDevice/: platformio.ini
devices/PeripheralDevice/src/: main.cpp
devices/pill-dispenser/: README.md  platformio.ini
devices/pill-dispenser/src/: main.cpp  udp.cpp  udp.cpp.backup
devices/pilldispenserwithBLE_jan30a_20240130142623/: pilldispenserwithBLE_jan30a_20240130142623.ino
devices/python central device/: Centraldevice.py  Notes.txt  bleak_test.py
main-inventory-system/: README.md  data.json  pyproject.toml  user_data.json
main-inventory-system-gui/: data.json  main.py  user_data.json
main-inventory-system/main_inventory_system/: main.py
